# wickra-screener

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  repo-metadata.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: check-cbindgen.sh
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/src/: lib.rs
bindings/csharp/WickraScreener/: DllResolver.cs  Native.cs  README.md  Screener.cs  WickraScreener.csproj
bindings/csharp/WickraScreener.Tests/: GoldenTests.cs  ScreenerTests.cs  WickraScreener.Tests.csproj
bindings/go/: README.md  go.mod  golden_test.go  wickra.go  wickra_test.go
bindings/go/include/: wickra_screener.h
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/screener/: Native.java  Screener.java
bindings/java/src/test/java/org/wickra/screener/: GoldenTest.java  ScreenerTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  golden.test.js  screener.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_screener/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: screener.R
bindings/r/src/: Makevars  Makevars.win  wickra_screener.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
crates/screener-bench/: Cargo.toml
crates/screener-bench/benches/: screener.rs
crates/screener-cli/: Cargo.toml
crates/screener-cli/src/: args.rs  main.rs  run.rs
crates/screener-core/: Cargo.toml
crates/screener-core/src/: config.rs  error.rs  eval.rs  expr.rs  indicator_set.rs  lib.rs  scan.rs  screener.rs  spec.rs  symbol_state.rs  universe.rs
crates/screener-core/tests/: conformance.rs  golden.rs  proptest_invariants.rs  streaming_eq_batch.rs
docs/: ARCHITECTURE.md  CONDITIONS.md  CROSS_SECTION.md  Cookbook.md  INDICATORS.md  STREAMING.md
examples/: README.md
examples/c/: CMakeLists.txt  scan.c  scan.cpp
examples/csharp/Scan/: Program.cs  Scan.csproj
examples/go/: go.mod  scan.go
examples/java/: Scan.java
examples/node/: package-lock.json  package.json  scan.js
examples/python/: scan.py
examples/r/: scan.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: condition_eval.rs  scan_batch.rs  spec_parse.rs  symbol_fold.rs
golden/: README.md  data.json
golden/data/: sym-01.csv  sym-02.csv  sym-03.csv  sym-04.csv  sym-05.csv  sym-06.csv
golden/expected/: breadth.json  cross_section_rank.json  crossover.json  mean_reversion.json  momentum.json
golden/specs/: breadth.json  cross_section_rank.json  crossover.json  mean_reversion.json  momentum.json
