[package]
name = "wickra-screener-wasm"
description = "WebAssembly bindings for wickra-screener — the data-driven scan core in the browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Modern rustc emits a wasm feature set (bulk-memory, sign-ext, …) that the
# wasm-opt bundled with wasm-pack is too old to validate. The wasm-bindgen output
# is already valid and functional; skip the optional size-only optimizer pass.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true

[dependencies]
# The core without the `parallel` feature: no rayon, so the scan is sequential
# and byte-identical to the parallel one, and it compiles cleanly to wasm32.
# Declared as a direct path dep, not `workspace = true`, because cargo silently
# ignores `default-features = false` on an inherited workspace dependency.
screener-core = { path = "../../crates/screener-core", version = "0.1.0", default-features = false }
wasm-bindgen = "0.2"
