[package]
name = "wickra-screener"
description = "Reference command-line screener over the Wickra screener-core: load a spec and a universe of CSV candle files, run a scan, print the report."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "wickra-screener"
path = "src/main.rs"

[dependencies]
# The data-driven scan core.
screener-core.workspace = true
serde_json.workspace = true
clap.workspace = true
