[package]
name = "wickra-screener-example"
description = "A runnable Rust example for the Wickra screener core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "scan"
path = "src/main.rs"

[dependencies]
screener-core = { workspace = true }
serde_json = { workspace = true }
